# Sysc

SCVP.Exercise2/: CMakeLists.txt  exor.h  exor_main.cpp  mon.h  nand.h  stim.h
SCVP.Exercise3/: CMakeLists.txt  state_machine.cpp  state_machine.h
SCVP.Exercise4/: CMakeLists.txt  main.cpp  place.h  subnet.h  transition.h
SCVP.Exercise5/: CMakeLists.txt  kpn.h  main.cpp
SCVP.Exercise6/: CMakeLists.txt  bus.h  main.cpp  memory.h
SCVP.Exercise8/: CMakeLists.txt  initiator.h  main.cpp
exercise2/: CMakeLists.txt  exor.h  exor_main.cpp  mon.h  nand.h
exercise3/: main.cpp  state_machine.cpp  state_machine.h
exercise4/: main.cpp  place.h  subnet.h  transition.h
exercise5/: kpn.cpp  kpn.h
exercise6/: bus.h  main.cpp  memory.h  processor.h
